Отредактировал интерфейс сервиса на получение списка устройств, сам сервис и контроллер

--- a/RemTool/ClientApp/src/app/admin/shared/admin-layout/admin-layout.component.html
+++ b/RemTool/ClientApp/src/app/admin/shared/admin-layout/admin-layout.component.html
@@ -6,7 +6,7 @@
     .sidenav {
         height: 100%;
         width: 170px;
-        position: fixed;
+        position: relative;
         z-index: 1;
         top: 0;
         left: 0;
