--- a/RemTool/ClientApp/src/app/main-page/main-page.component.html
+++ b/RemTool/ClientApp/src/app/main-page/main-page.component.html
@@ -2,8 +2,9 @@
     <h1 class="hero__header">
         Ремонт строительного инструмента
     </h1>
-    <div class="hero__slider swiper-container">
+    <div>
     </div>
+    <app-swiper class="hero__slider"></app-swiper>
 </section>
 <section class="we-repair">
     <h2>Мы ремонтируем</h2>
