--- a/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.scss
+++ b/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.scss
@@ -1,4 +1,5 @@
 .header {
+    z-index: 999;
     margin-bottom: 30px;
     &__topper {
         font-size: 14px;
@@ -29,62 +30,12 @@
         }
     }
 
-    &__logo {
-    }
-
     &__nav {
-        & ul {
-            width: 100%;
-            height: 60px;
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: center;
-            font-size: 18px;
-            font-weight: 600;
-        }
-        & li {
-
-        }
-        &::before {
-            content: '';
-            position: absolute;
-            // top: 0;
-            left: 0;
-            height: 60px;
-            width: 100%;
-            background-color: var(--grey-color);
-            z-index: -1;
-        }
+        // display: flex;
     }
 
-    &__link {
-        & a {
-            position: relative;
-            display: block;
-            color: var(--dark-color);
-            text-decoration: none;
-            // padding: 19px 16px;
-            line-height: 60px;
-            // background-color: #fff;
-            margin: 0 16px;
-            &:hover {
-                color: var(--orange-color);
-            }
-        }
-        &_active a {
-            color: var(--orange-color);
-            position: relative;
-            &::before {
-                content: '';
-                position: absolute;
-                width: 100%;
-                height: 4px;
-                background-color: var(--orange-color);
-                bottom: 0;
-                left: 0;
-            }
-        }
+    &__logo {
+        width: 129px;
     }
 
     &__search {
@@ -133,105 +84,169 @@
             text-decoration: none;
             white-space: nowrap;
         }
-    }
-    &__drop {
-        // position: absolute;
-        // background-color: var(--grey-color);
-        // visibility: hidden;
-    }
-    &__drop-electro, &__drop-benzo {
-        // cursor: default;
-        // position: absolute;
-        // // width: 300px;
-        // width: 100%;
-        // height: 400px;
-        // background-color: var(--grey-color);
-        // padding: 16px;
-        // top: 0;
-        // // visibility: hidden;
-        // box-sizing: border-box;
+        & a > img {
+            width: 28px;
+        }
     }
 }
 
-.drop-link {
-    // cursor: pointer;
+.nav {
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    white-space: nowrap;
-    // margin: 0 16px;
-    & > a {
-        margin: 0 10px 0 16px;
+    height: 60px;
+    & ul {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
     }
-    & > svg {
-        // margin-left: 10px;
-        margin-right: 16px;
-        transition: transform 200ms ease;
+    &__item {
+        position: relative;
+        display: flex;
+        align-items: center;
     }
-    &:hover .header__drop{
-        visibility: visible;
+    &__link {
+        // padding: 0 16px;
+        cursor: pointer;
+        text-decoration: none;
+        color: var(--dark-color);
+        font-size: 16px;
+        font-weight: 600;
+        line-height: 60px;
+        margin: 0 16px;
+        &:hover {
+            // color: var(--orange-color);
+        }
     }
-    &:hover > a {
+    &::before {
+        content: '';
+        position: absolute;
+        top: 40px;
+        left: 0;
+        height: 60px;
+        width: 100%;
+        background-color: var(--grey-color);
+        background: var(--grey-grad);
+        z-index: -1;
+    }
+}
+
+.arrow-down {
+    transition: transform 200ms ease;
+}
+
+.nav__item {
+    position: relative;
+    // cursor: pointer;
+    &:hover .nav__link{
         color: var(--orange-color);
     }
-    &:hover > svg {
-        // transform: rotate(180deg);
-        & > path {
-            color: var(--orange-color);
-            stroke: var(--orange-color);
-        }
+    &:hover .arrow-down{
+        transform: rotate(180deg);
+    }
+    &:hover .arrow-down > svg > path{
+        stroke: var(--orange-color);
+    }
+    &:hover .drop-menu {
+        visibility: visible;
     }
 }
 
 .drop-menu {
-    // position: absolute;
-    background-color: var(--grey-color);
-    top: 0;
+    z-index: 999;
+    position: absolute;
+    // width: 100%;
+    display: flex;
     left: 0;
-    // visibility: hidden;
-    &__link {
+    top: 60px;
+    background-color: var(--grey-color);
+    background: var(--grey-grad);
+    visibility: hidden;
+    &__item {
+        width: 220px;
         display: flex;
-        flex-direction: row;
-        justify-content: space-between;
         align-items: center;
-        padding: 0 16px;
-        cursor: pointer;
-        // margin: 0 16px;
-        // line-height: 40px;
-        & > a {
-            margin: 0;
-        }
+        justify-content: space-between;
+        padding-right: 16px;
         & > svg {
-            margin-left: 10px;
+            transition: transform 200ms ease;
         }
-        &:hover > a {
+        &:hover > a{
             color: var(--orange-color);
         }
-        &:hover {
-            & > svg {
-                // transform: rotate(180deg);
-                & > path {
-                    stroke: var(--orange-color);
-                }
-            }
+        &:hover > svg > path {
+            stroke: var(--orange-color);
         }
-        &:hover:first-of-type .header__drop-electro {
-            visibility: visible;
+        &:hover > svg {
+            transform: rotate(180deg);
         }
-        &:hover:last-of-type .header__drop-benzo {
+        &:hover > .side-drop-menu{
             visibility: visible;
         }
     }
-    &__electro, &__benzo {
-        cursor: default;
-        position: absolute;
-        // width: 300px;
-        width: 100%;
-        height: 400px;
-        background-color: var(--grey-color);
-        padding: 16px;
-        top: 0;
-        // visibility: hidden;
-        box-sizing: border-box;
+    &__link {
+        font-weight: 600;
+        display: block;
+        margin: 0 16px;
+        line-height: 60px;
+        text-decoration: none;
+        color: var(--dark-color);
+        cursor: pointer;
+        &:hover {
+            color: var(--orange-color);
+        }
     }
 }
+
+
+.side-drop-menu {
+    position: absolute;
+    top: 0;
+    margin-left: 100%;
+    padding: 16px;
+    width: 806px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    visibility: hidden;
+    background-color: var(--grey-color);
+    background: var(--grey-grad);
+    & a {
+        text-decoration: none;
+        font-size: 14px;
+        font-weight: 600;
+        color: var(--dark-color);
+        padding: 0 16px;
+        margin: 0 10px 10px 0;
+        border: 2px solid var(--dark-color);
+        border-radius: 20px;
+        line-height: 36px;
+        &:hover {
+            color: var(--orange-color);
+            border: 2px solid var(--orange-color);
+        }
+    }
+}
+// .drop {
+//     align-self: start;
+//     & * {
+//         background-color: var(--grey-color);
+//     }
+//     &__link_prev {
+//         display: flex;
+//         flex-direction: row;
+//         align-items: center;
+//     }
+//     &__menu {
+//         // visibility: hidden;
+//     }
+//     &__link_second {
+//         display: flex;
+//         flex-direction: row;
+//         align-items: center;
+//         justify-content: space-between;
+//         margin-right: 16px;
+//     }
+// }
+
