--- a/RemTool/ClientApp/src/styles.scss
+++ b/RemTool/ClientApp/src/styles.scss
@@ -1,12 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'reset.scss';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap');
+@import 'swiper/swiper-bundle.css';
 :root {
     --dark-color: #131522;
     --dark-grey-color: #828282;
     --grey-color: #DCDEEB;
     --light-color: #F2F2F2;
-    --orange-color: #E2632A;
+    --orange-color: #E2632A; //rgb(226,99,42)
+    --grey-grad: linear-gradient(145deg, #CED1E9 0%, #EFF0F8 100%);
 }
 
 body {
