--- a/RemTool/ClientApp/src/app/main-page/main-page.component.html
+++ b/RemTool/ClientApp/src/app/main-page/main-page.component.html
@@ -7,66 +7,77 @@
     <app-swiper class="hero__slider"></app-swiper>
 </section>
 <section class="we-repair">
-    <h2>Мы ремонтируем</h2>
+    <h2 class="main-h2">Мы ремонтируем</h2>
     <div class="we-repair__row row-2-col">
-        <a href="#">Электроинструмент</a>
-        <a href="#">Бензоинструмент</a>
-        <a href="#">Компрессоры</a>
-        <a href="#">Лодочные моторы</a>
+        <a class="we-repair__electric" href="#">Электроинструмент</a>
+        <a class="we-repair__benzo" href="#">Бензоинструмент</a>
+        
     </div>
-    <div class="we-repair__row row-2-col">
+    <div class="we-repair__row row-3-col">
+        <a class="we-repair__welding" href="#">Сварочные аппараты</a>
+        <a class="we-repair__generators" href="#">Генераторы</a>
+        <a class="we-repair__compressor" href="#">Компрессоры</a>
+        <a class="we-repair__rest" href="#">Техника для отдыха</a>
+        <a class="we-repair__garden" href="#">Садовая техника</a>
+        <a class="we-repair__heater" href="#">Тепловые пушки</a>
+    </div>
+    
+</section>
+
+<section class="advantage">
+    <h2 class="main-h2">Почему мы</h2>
+    <div class="advantage__wrapper">
+        <div class="advantage__item">
+            <img src="../../assets/img/diagnostic.svg" alt="">
+            Качественная диагностика
+        </div>
+        <div class="advantage__item">
+            <img src="../../assets/img/guarantee.svg" alt="">
+            Гарантия на ремонт
+        </div>
+        <div class="advantage__item">
+            <img src="../../assets/img/delivery.svg" alt="">
+            Выездной ремонт
+        </div>
+        <div class="advantage__item">
+            <img src="../../assets/img/experience.svg" alt="">
+            Многолетний опыт
+        </div>
     </div>
 </section>
 
-<div style="font-size: 30px;">
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor soluta ducimus qui, commodi vitae corporis inventore cupiditate natus similique odit autem numquam, sunt sit nam, veniam veritatis voluptatem aut laborum?
-Sapiente minima ipsum assumenda officiis rerum in vero, eveniet sequi adipisci quod, commodi quae incidunt aliquid laboriosam. Voluptatem temporibus aliquam cumque corporis enim pariatur rerum, sapiente est necessitatibus, maxime exercitationem.
-Qui neque maiores error, exercitationem veritatis, non quod numquam voluptatibus suscipit voluptatum maxime nesciunt, magni deserunt corrupti dolore magnam fuga! Quia facilis optio atque nisi sit culpa iure, harum laboriosam.
-Vel, quaerat consequatur blanditiis non sint totam maxime autem facilis eligendi deserunt, soluta ratione? In, praesentium, reiciendis corrupti deleniti itaque alias incidunt sequi vel ipsum, voluptas qui illum. Eos, veritatis.
-Ratione maxime facilis quis possimus, esse dolorum ad quaerat incidunt sequi illo sed quod doloremque voluptates consequuntur delectus quas repellendus veritatis vel reiciendis maiores, perspiciatis veniam aperiam rerum saepe. Nisi!
-Quod vitae ex vero atque rem, velit fuga commodi aliquam amet dolores iure. Reprehenderit aspernatur praesentium dolore harum totam perferendis consequatur consectetur neque ullam quae, laudantium labore molestiae cum facere.
-Ipsa animi, fuga corrupti incidunt molestiae nobis quas sit beatae. Facilis placeat ipsam totam iusto dolor temporibus id eos amet beatae labore. Velit quidem dolorem quam exercitationem nesciunt cupiditate qui.
-Architecto, neque explicabo. Illo obcaecati, rerum ea odit est quam aperiam temporibus sint. Doloribus nisi quo similique accusantium, itaque doloremque harum quasi nihil omnis, necessitatibus porro ipsum ea quos atque.
-Dicta velit omnis repellat, nostrum dolor dolore quod inventore, molestias libero neque necessitatibus molestiae minus, aut ex maiores veniam. Recusandae, debitis perferendis in adipisci nam tempore reprehenderit officiis culpa sit.
-Possimus recusandae explicabo fugiat nesciunt aliquam, temporibus tempore quasi corporis numquam a cupiditate quis aut laudantium, in accusamus rerum voluptatum facilis! Neque qui, eligendi nesciunt fugiat non reiciendis sed? Culpa!
-Facilis, maiores perferendis! Eligendi ipsum, numquam excepturi sunt dolor ea magnam enim pariatur molestias explicabo, culpa at officiis soluta veniam ipsa recusandae est fugit aperiam quam adipisci commodi error consequuntur.
-Nisi nulla veniam odio sint, a praesentium autem sunt aperiam, eos laborum nihil dolores, cupiditate velit fugit possimus maxime impedit voluptatum! Quia autem dolorem exercitationem placeat voluptatibus praesentium aperiam hic.
-Quos, sint? Et adipisci optio iusto amet harum debitis exercitationem ipsam eos blanditiis non repudiandae magni distinctio, maiores cum enim laboriosam nulla? Dignissimos, repellendus ea? Atque ullam illum beatae recusandae!
-Dolore asperiores consectetur fuga itaque sit animi maxime cupiditate illum a non autem veniam atque, eius aspernatur adipisci deleniti earum alias reprehenderit? Velit, odio cum? Nisi temporibus reprehenderit nostrum inventore.
-Laboriosam explicabo odit dolor, tempore cupiditate ad nisi. Iure, aliquid maiores voluptatibus maxime sapiente amet, officiis corrupti nostrum consequuntur sunt nesciunt quisquam est nulla sit earum laboriosam placeat animi ipsum.
-Blanditiis nobis, veritatis perferendis soluta illo pariatur temporibus velit asperiores quos voluptate consequatur ipsam impedit. Corporis excepturi aliquid hic aliquam sequi perferendis, labore, distinctio voluptates quisquam nemo amet tenetur vel?
-Voluptatum magnam iure at ab molestiae. Sequi odit possimus, ratione porro odio neque ullam! Aliquid enim quam explicabo. Placeat, a incidunt. Id pariatur cumque maxime dolorum dolore, quam vero dolor?
-Eveniet rem doloribus numquam ullam quae pariatur deserunt fugit minus temporibus? Laborum est consectetur odit ipsum, dolore sit sapiente, molestiae quo nam nihil vero harum eius modi facilis maiores. Ratione.
-Distinctio voluptas quia voluptates veniam atque natus necessitatibus, voluptate rerum, eligendi aspernatur autem. Animi, veniam in. Atque reprehenderit facilis commodi laborum tenetur, cupiditate officia ullam consequatur. Quae adipisci ducimus tempore.
-Quis illo enim natus vero iste cum, culpa veritatis. Omnis dignissimos minus harum sit laudantium, officia perspiciatis. Recusandae laboriosam, ipsum asperiores explicabo expedita dolorem sit, in iure rerum ratione nulla?
-Quaerat dignissimos incidunt libero ipsam possimus, delectus nisi vero inventore. Velit quos reprehenderit, quam quibusdam perferendis, laborum voluptatum quae aliquid tenetur vitae odit omnis reiciendis corporis fugiat eius sunt alias?
-Quidem, eum maiores eligendi officia fugiat asperiores odio unde? Natus ab qui unde earum culpa assumenda voluptatum, voluptas placeat, saepe illo, doloremque dolor praesentium id quasi distinctio est dolorum? Praesentium.
-Excepturi veniam sint saepe magni inventore facere eligendi, mollitia quo molestiae esse minus odio quasi voluptates aperiam repudiandae aliquid rem quisquam deserunt tenetur commodi? Asperiores deserunt culpa consectetur nulla aut.
-Quam facere blanditiis suscipit unde quidem nulla, numquam mollitia dolor illo quia amet doloribus quaerat reiciendis laboriosam ut! Qui quam laudantium aliquam repudiandae odit est velit, architecto numquam a molestiae!
-Voluptas totam esse vitae magni ratione dignissimos ab unde reiciendis laboriosam, nesciunt odit hic suscipit facere ipsum expedita, nobis facilis fuga necessitatibus! Cum provident corporis enim eligendi quidem repudiandae perferendis?
-Tempora quisquam cum corporis itaque magni nihil tempore aliquid sequi, aut eaque, repellendus tenetur, eveniet modi odio assumenda harum a dicta quos at quasi vel libero? Iure iste esse laborum.
-Officia, fugiat voluptatum nemo minus sunt ullam veritatis cumque. Aliquam, vel voluptatum. Illum placeat illo voluptates, odio harum saepe laudantium voluptatem ullam eveniet mollitia incidunt, vitae consequuntur magni? Excepturi, minima?
-Obcaecati nesciunt pariatur quisquam ipsam quis vel aliquid asperiores voluptatem explicabo. Alias repellat, perspiciatis modi culpa vel et fugiat ratione, porro soluta esse quidem consectetur magnam dolorem! Quia, voluptas aspernatur!
-Quod deleniti ab nostrum necessitatibus velit dolor, cumque nobis amet, rerum, aliquam explicabo id earum obcaecati. Quo esse asperiores, deleniti cupiditate reiciendis atque corporis qui natus quaerat explicabo, aliquam laborum.
-Iste doloribus eos odio quisquam esse repellat dolorem, amet vero culpa necessitatibus accusantium non perferendis odit, maiores quae ex sed fugiat impedit dolores facere nam nobis, laborum incidunt eveniet! Recusandae.
-Ducimus consequatur in ea fugit dignissimos beatae temporibus alias magni eius nisi, totam facere iure omnis cupiditate exercitationem voluptates numquam illum dolores voluptatibus praesentium debitis quas ipsam! Doloribus, quae! Inventore.
-Dolorem laudantium voluptatum tempore porro error dolore temporibus perferendis! Ad id pariatur fuga, reprehenderit a quia cum, expedita nihil iure quaerat ipsa sint minima? Error deserunt officia alias mollitia magnam!
-Eveniet ea sapiente sequi voluptatum dolorum ratione dolore vitae minus voluptate provident excepturi vero beatae sit alias molestiae libero repellendus ducimus itaque hic sunt qui modi a, similique est! Earum!
-Accusamus officia harum, vero omnis tenetur blanditiis incidunt qui! Libero harum suscipit voluptas perferendis fugiat odit. Libero fugiat praesentium corrupti fugit deleniti, id numquam quae, exercitationem nostrum tempore culpa eligendi.
-Similique iure deleniti sit ducimus, amet, tenetur sequi explicabo labore perspiciatis aut modi fugit laudantium, aperiam quae tempore magni sapiente ad quibusdam quos ut corporis ea. Nemo eligendi mollitia neque!
-Dolor quis ipsa neque tenetur aliquid porro quidem suscipit! Placeat perferendis ad excepturi nisi velit vitae odio perspiciatis obcaecati vero amet necessitatibus, recusandae eveniet ea veniam ducimus a commodi sequi.
-Ipsa, autem! Eum perferendis, nobis tenetur dolores ad dicta quibusdam dolor optio quo voluptatum voluptatem fuga, quod, corporis sint doloribus. Labore ipsum, similique molestiae quis obcaecati repellendus dignissimos. Dicta, odit.
-Sint quis dolorum facere, eius voluptate blanditiis rerum perferendis minus mollitia reiciendis distinctio, veritatis maxime quae eos aliquid quo cupiditate est sapiente ullam. Ratione quam officia deleniti culpa ab molestias.
-Magni quaerat dolorem temporibus adipisci dolor aperiam fugiat commodi tempora obcaecati iste impedit, minus perspiciatis quasi culpa ut sit? Illum consequuntur libero aliquam facilis iste, itaque beatae. Temporibus, tempore numquam?
-In voluptatem quia excepturi laborum deserunt repellat fugiat magni, maiores saepe beatae. Aut fugit provident at ea sint quasi atque quas earum laudantium quae nam tempore laborum incidunt, corrupti distinctio?
-Omnis nesciunt accusamus provident, sit sed officia inventore odio sint deleniti doloribus at corporis eligendi hic error magni labore quibusdam, aliquid necessitatibus ducimus, suscipit nam eveniet! Iste suscipit vero molestias.
-Adipisci ex suscipit, iste nihil provident odio error modi itaque, beatae, velit minima fugit cumque ab sunt facilis consequatur mollitia cupiditate quaerat vel non expedita consectetur? Incidunt earum qui a?
-Perspiciatis tempore eveniet, eius rem tempora ab tenetur, reiciendis ad impedit neque aliquam officia fugiat delectus enim. Temporibus placeat exercitationem fuga amet! Quos, deserunt. Explicabo veniam saepe autem recusandae? Facilis.
-Beatae magni veritatis cupiditate! Aliquam blanditiis nostrum nam cum harum saepe a aspernatur numquam et vero quis enim dignissimos quisquam veritatis facilis, in magnam repellendus placeat dolorum suscipit iusto similique.
-Quo asperiores autem fuga tenetur mollitia praesentium pariatur dicta saepe voluptatem, explicabo aperiam quos quam eius consectetur qui recusandae. Nihil nostrum sapiente ea natus ab voluptates quae fuga voluptas nulla!
-Distinctio reiciendis soluta quaerat maiores provident? Nobis, alias illum ipsam officiis a consequatur velit praesentium. Necessitatibus, sed, quasi nisi accusantium sint ab aperiam dicta enim ipsum natus molestias tempora praesentium!
-Praesentium odio, adipisci alias facere suscipit officiis architecto dolores, iure, tenetur reiciendis rem consectetur sed quaerat fugit ex. Architecto quas a eligendi labore nam consequuntur tempora numquam fugiat quod magnam.
-Minus minima nihil cupiditate, at ipsa rem quas nam molestias accusantium eaque debitis sunt! In maiores corrupti libero deleniti reprehenderit. Perferendis deserunt sapiente nesciunt hic officiis. Quasi quo dignissimos ad?
-Eligendi, cumque. Ab nemo iste libero hic minus illo quos eligendi tempora possimus cumque, illum consequuntur natus facere modi tempore! Accusamus explicabo illum minus velit ducimus ipsum pariatur sed? Quidem.
-Aut dignissimos odit ab numquam, itaque ea praesentium quae. Perferendis praesentium ullam explicabo deleniti cumque delectus quod? Ratione quisquam, cumque sunt ipsa earum dolore officiis at mollitia. Iure, nobis consectetur.
-</div>
+<section class="brands">
+    <h2 class="main-h2">Бренды</h2>
+    <app-swiper-brands class="brands__slider"></app-swiper-brands>
+</section>
+
+<section class="popular">
+    <h2 class="main-h2">Популярные услуги</h2>
+    <div class="popular__row row-4-col">
+        <a href="">Замена ствола перфоратора</a>
+        <a href="">Замена щеток в шуруповерте</a>
+        <a href="">Замена подшипника редуктора УШМ</a>
+        <a href="">Заточка ножа триммера</a>
+        <a href="">Заточка цепи бензопилы</a>
+        <a href="">Обслуживание бензогенератора</a>
+        <a href="">Замена выпрямителя в сварочном аппарате</a>
+        <a href="">Регулировка давления компрессора</a>
+    </div>
+</section>
+
+<section class="description">
+    <h2 class="main-h2">РЕМТУЛ - это профессиональный ремонт строительного инструмента</h2>
+    <div class="description__content">
+        <p class="description__text">
+            Любой даже самый дорогой и качественный инструмент имеет ограниченный ресурс работы. 
+            Зачастую износ деталей и частей инструмента приводит к поломкам в самый неподходящий момент. 
+            Чтобы избежать неожиданного выхода из строя Вашего инструмента настоятельно рекомендуем придерживаться регламента на его обслуживание.
+            <br>
+            <br>
+            Наш сервисный центр производит профессиональное обслуживание и ремонт строительного инструмента любых производителей.
+        </p>
+        <div class="description__process">
+            <img src="../../assets/img/fix_process.png" alt="">
+        </div>
+    </div>
+</section>
