--- a/RemTool/ClientApp/src/app/tools-page/tools-page.component.html
+++ b/RemTool/ClientApp/src/app/tools-page/tools-page.component.html
@@ -1,1 +1,20 @@
 <p>tools-page works!</p>
+<div class="container">
+    
+</div>
+<!-- <input type="radio" name="tab-btn" id="tab-electro">
+<label for="tab-electro">Электроинструмент</label>
+<input type="radio" name="tab-btn" id="tab-electro">
+<label for="tab-electro">Электроинструмент</label>
+<input type="radio" name="tab-btn" id="tab-electro">
+<label for="tab-electro">Электроинструмент</label>
+<input type="radio" name="tab-btn" id="tab-electro">
+<label for="tab-electro">Электроинструмент</label>
+<input type="radio" name="tab-btn" id="tab-electro">
+<label for="tab-electro">Электроинструмент</label>
+<input type="radio" name="tab-btn" id="tab-electro">
+<label for="tab-electro">Электроинструмент</label>
+<input type="radio" name="tab-btn" id="tab-electro">
+<label for="tab-electro">Электроинструмент</label>
+<input type="radio" name="tab-btn" id="tab-electro">
+<label for="tab-electro">Электроинструмент</label> -->
