--- a/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.scss
+++ b/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.scss
@@ -153,23 +153,29 @@
 }
 
 .drop-menu {
+    visibility: hidden;
     z-index: 999;
     position: absolute;
     // width: 100%;
     display: flex;
     left: 0;
     top: 60px;
+    // backdrop-filter: blur(16px);
+    // background-color: rgba(white, 0.5);
     background-color: var(--grey-color);
     background: var(--grey-grad);
-    visibility: hidden;
     &__item {
         width: 220px;
         display: flex;
         align-items: center;
         justify-content: space-between;
         padding-right: 16px;
+        // margin: 5px 0;
         & > svg {
             transition: transform 200ms ease;
+        }
+        &:hover {
+            background-color: rgba($color: #000000, $alpha: 0.1);
         }
         &:hover > a{
             color: var(--orange-color);
@@ -188,7 +194,7 @@
         font-weight: 600;
         display: block;
         margin: 0 16px;
-        line-height: 60px;
+        line-height: 40px;
         text-decoration: none;
         color: var(--dark-color);
         cursor: pointer;
@@ -198,20 +204,27 @@
     }
 }
 
-
 .side-drop-menu {
+    visibility: hidden;
     position: absolute;
     top: 0;
     margin-left: 100%;
     padding: 16px;
-    width: 806px;
+    // width: auto;
+    width: 60vw;
+    max-width: 823px;
+    min-height: 320px;
+    max-height: 500px;
     box-sizing: border-box;
     display: flex;
+    align-items: start;
+    align-content: start;
     flex-direction: row;
     flex-wrap: wrap;
-    visibility: hidden;
-    background-color: var(--grey-color);
-    background: var(--grey-grad);
+    backdrop-filter: blur(16px);
+    background-color: rgba(white, 0.5);
+    // background-color: var(--grey-color);
+    // background: var(--grey-grad);
     & a {
         text-decoration: none;
         font-size: 14px;
@@ -222,31 +235,66 @@
         border: 2px solid var(--dark-color);
         border-radius: 20px;
         line-height: 36px;
+        white-space: nowrap;
         &:hover {
             color: var(--orange-color);
             border: 2px solid var(--orange-color);
         }
     }
 }
-// .drop {
-//     align-self: start;
-//     & * {
-//         background-color: var(--grey-color);
-//     }
-//     &__link_prev {
-//         display: flex;
-//         flex-direction: row;
-//         align-items: center;
-//     }
-//     &__menu {
-//         // visibility: hidden;
-//     }
-//     &__link_second {
-//         display: flex;
-//         flex-direction: row;
-//         align-items: center;
-//         justify-content: space-between;
-//         margin-right: 16px;
-//     }
-// }
 
+
+.footer {
+    // position: relative;
+    & > img {
+        display: block;
+        margin: 0 auto;
+    }
+    &::before {
+        content: '';
+        position: absolute;
+        // top: 40px;
+        // bottom: 0;
+        left: 0;
+        margin-top: 97px;
+        height: 432px;
+        width: 100%;
+        background-color: var(--orange-color);
+        // background: var(--grey-grad);
+        z-index: -1;
+    }
+    &__content {
+        display: flex;
+        justify-content: space-between;
+        margin: 30px 0;
+        height: 280px;
+    }
+    &__map {
+        width: 40%;
+        border-radius: 6px;
+    }
+    &__nav, &__contacts {
+        width: 23%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        & > a, & > span {
+            text-decoration: none;
+            color: var(--light-color);
+        }
+    }
+    &__messengers {
+        & > a {
+            margin-right: 16px;
+            & > svg {
+                width: 50px;
+                & > path {
+                    fill: var(--light-color);
+                }
+            }
+        }
+        // display: flex;
+        // justify-content: space-between;
+    }
+
+}
