--- a/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.html
+++ b/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.html
@@ -31,7 +31,8 @@
     </tr>
   </tbody>
 </table>
-шаблон для редактирования инструментов
+
+<!--шаблон для редактирования инструментов-->
 <ng-template #editToolTypeTemplate>
   <td>
     <input type="text" [(ngModel)]="toolType.Name" class="form-control" />
@@ -58,33 +59,158 @@
 </ng-template>
 
 <!--шаблон для добавления инструментов-->
+<!--<ng-template #createToolTypeTemplate>
+  <div class="form-group">
+    <label>Название</label>
+    <input type="text" [(ngModel)]="toolType.Name" class="form-control" />
+  </div>
+
+  <div class="form-group">
+    <label>Основой тип</label>
+    <input type="number" [(ngModel)]="toolType.MainType" class="form-control" />
+  </div>
+
+  <div class="form-group">
+    <label>Второстепенный тип</label>
+    <input type="number" [(ngModel)]="toolType.SecondaryType" class="form-control" />
+  </div>
+
+  <div class="form-group">
+    <label>Бренды</label>
+    <input type="text" [(ngModel)]="toolType.Brands" class="form-control" />
+  </div>
+
+  <div class="form-group">
+    <label>Услуги-стоимость</label>
+    <input type="text" [(ngModel)]="toolType.ServeCost" class="form-control" />
+  </div>
+
+  <div class="form-group">
+    <label>Ссылка на картинку</label>
+    <input type="text" [(ngModel)]="toolType.ImgRefenrence" class="form-control" />
+  </div>
+
+  <div>
+    <input type="button" value="Сохранить" (click)="saveToolType()" class="btn btn-success" />
+    <input type="button" value="Отмена" (click)="resetToolType()" class="btn btn-warning" />
+  </div>
+</ng-template>-->
+
+
+
+
+
 <ng-template #createToolTypeTemplate>
   <div class="form-group">
     <label>Название</label>
     <input type="text" [(ngModel)]="toolType.Name" class="form-control" />
   </div>
+
   <div class="form-group">
     <label>Основой тип</label>
     <input type="number" [(ngModel)]="toolType.MainType" class="form-control" />
   </div>
+
   <div class="form-group">
     <label>Второстепенный тип</label>
     <input type="number" [(ngModel)]="toolType.SecondaryType" class="form-control" />
   </div>
+
+  <!-- Бренды -->
   <div class="form-group">
     <label>Бренды</label>
     <input type="text" [(ngModel)]="toolType.Brands" class="form-control" />
   </div>
+  <!--<script>
+    var i = 0;
+    function addBrand() {
+      var bt = document.getElementById("Brands");
+      var brand = document.createElement("div");
+
+
+      // Name of Brand
+      var brandNameLabel = document.createElement("label");
+      var brandNameLabelText = document.createTextNode("Название бренда " + i);
+      brandNameLabel.appendChild(brandNameLabelText);
+      brand.appendChild(brandNameLabel);
+
+      // Input Name of Brand
+      var brandNameInput = document.createElement("input");
+      brandNameInput.setAttribute("type", "text");
+      brandNameInput.setAttribute("class", "form-control");
+      brandNameInput.setAttribute("name", "toolType.Brands[" + i + "]");
+      brand.appendChild(brandNameInput);
+
+      bt.appendChild(brand);
+      i++;
+    }
+  </script>
+  <button type="button" onclick="addBrand()">Add Brand</button>
+  <div class="form-group" id="Brands">
+
+  </div>-->
+
+
+  <!-- Услуга-стоимость -->
   <div class="form-group">
     <label>Услуги-стоимость</label>
     <input type="text" [(ngModel)]="toolType.ServeCost" class="form-control" />
   </div>
+  <!--<script>
+    var j = 0;
+    function addServeCost() {
+      var sc_t = document.getElementById("ServeCost");
+      var sc_pair = document.createElement("div");
+
+
+      // Name of Service
+      var serviceNameLabel = document.createElement("label");
+      var serviceNameLabelText = document.createTextNode("Название сервиса " + j);
+      serviceNameLabel.appendChild(serviceNameLabelText);
+      sc_pair.appendChild(featureNameLabel);
+
+      // Input Name of Service
+      var serviceNameInput = document.createElement("input");
+      serviceNameInput.setAttribute("type", "text");
+      serviceNameInput.setAttribute("class", "form-control");
+      serviceNameInput.setAttribute("name", "toolType.ServeCost.Key[" + j + "]");
+      sc_pair.appendChild(serviceNameInput);
+
+
+      // Cost of Service
+      var costLabel = document.createElement("label");
+      var costLabelText = document.createTextNode("Стоимость" + j);
+      costLabel.appendChild(costLabelText);
+      sc_pair.appendChild(costLabel);
+
+      // Input Cost of Service
+      var costInput = document.createElement("input");
+      costInput.setAttribute("type", "text");
+      costInput.setAttribute("class", "form-control");
+      costInput.setAttribute("name", "toolType.ServeCost.Value[" + j + "]");
+      sc_pair.appendChild(costInput);
+
+      sc_t.appendChild(feature);
+      j++;
+    }
+  </script>
+  <button type="button" onclick="addServeCost()">Add ServeCost</button>
+  <div class="form-group" id="ServeCost">
+
+  </div>-->
+
   <div class="form-group">
     <label>Ссылка на картинку</label>
     <input type="text" [(ngModel)]="toolType.ImgRefenrence" class="form-control" />
   </div>
+
   <div>
     <input type="button" value="Сохранить" (click)="saveToolType()" class="btn btn-success" />
     <input type="button" value="Отмена" (click)="resetToolType()" class="btn btn-warning" />
   </div>
 </ng-template>
+
+
+
+
+
