--- a/RemTool/ClientApp/src/styles.scss
+++ b/RemTool/ClientApp/src/styles.scss
@@ -8,6 +8,7 @@
     --grey-color: #DCDEEB;
     --light-color: #F2F2F2;
     --orange-color: #E2632A; //rgb(226,99,42)
+    --alarm-color: #E2352A;
     --grey-grad: linear-gradient(145deg, #CED1E9 0%, #EFF0F8 100%);
 }
 
