--- a/RemTool/ClientApp/src/app/admin/shared/admin-layout/admin-layout.component.html
+++ b/RemTool/ClientApp/src/app/admin/shared/admin-layout/admin-layout.component.html
@@ -3,7 +3,7 @@
         <a routerLink="/">На сайт</a>
     </h1>
 
-    <ul>
+    <ul *ngIf="auth.isAuth() else login">
         <li routerLinkActive="active">
             <a [routerLink]="['/admin', 'edit-tools']">Редактировать инструменты</a>
         </li>
@@ -11,12 +11,16 @@
             <a [routerLink]="['/admin', 'edit']">Редактировать инструмент</a>
         </li> -->
         <li routerLinkActive="active">
-            <a [routerLink]="['/admin', 'login']">Вход</a>
-        </li>
-        <li routerLinkActive="active">
             <a href="#" (click)="logout($event)">Выход</a>
         </li>
-        
     </ul>
+    <ng-template #login>
+        <ul>
+            <li routerLinkActive="active">
+                <a [routerLink]="['/admin', 'login']">Вход</a>
+            </li>
+    
+        </ul>
+    </ng-template>
 </nav>
 <router-outlet></router-outlet>
