коррекция названий и мелочи всякой

--- a/RemTool/ClientApp/src/app/admin/spareparts-page/spareparts-page.component.html
+++ b/RemTool/ClientApp/src/app/admin/spareparts-page/spareparts-page.component.html
@@ -49,7 +49,7 @@
     </td>
     <td>
         <input type="button" value="Сохранить" (click)="saveSparePart()" class="btn btn-sm btn-success" />
-        <input type="button" value="Отмена" (click)="cancelSparePart()" class="btn btn-sm btn-warning" />
+        <input type="button" value="Отмена" (click)="resetSparePart()" class="btn btn-sm btn-warning" />
     </td>
 </ng-template>
 
@@ -77,6 +77,6 @@
     </div>
     <div>
         <input type="button" value="Сохранить" (click)="saveSparePart()" class="btn btn-success" />
-        <input type="button" value="Отмена" (click)="cancelSparePart()" class="btn btn-warning" />
+        <input type="button" value="Отмена" (click)="resetSparePart()" class="btn btn-warning" />
     </div>
 </ng-template>
